Add update endpoint for clocking out
